--- a/natours/css/style.css
+++ b/natours/css/style.css
@@ -41,6 +41,7 @@ body {
 .logo { height: 35px; }
 
 .text-box {
+  text-align: center;
   position: absolute;
   top: 40%;
   left: 50%;
@@ -51,6 +52,7 @@ body {
   color: #fff;
   text-transform: uppercase;
   backface-visibility: hidden;
+  margin-bottom: 60px;
 }
 
 .head-primary-main {
@@ -67,6 +69,31 @@ body {
   font-weight: 700;
   letter-spacing: 17.4px;
   animation: moveInRight 1s ease-out;
+}
+
+.btn:link,
+.btn:visited {
+  display: inline-block;
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 15px 40px;
+  border-radius: 100px;
+  transition: all 0.2s;
+}
+
+.btn:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+.btn:active {
+  transform: translateY(-1px);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.btn-white {
+  background-color: #fff;
+  color: #777;
 }
 
 @keyframes moveInLeft {
