--- a/natours/css/style.css
+++ b/natours/css/style.css
@@ -25,8 +25,8 @@ body {
   height: 95vh;
   background-image: linear-gradient(
     to right bottom,
-  rgba(126, 213, 111, 0.8),
-  rgba(40, 180, 131, 0.8)),
+    rgba(126, 213, 111, 0.8),
+    rgba(40, 180, 131, 0.8)),
   url(../img/hero.jpg);
   background-size: cover;
   background-position: top;
@@ -34,15 +34,15 @@ body {
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 }
 
-.logo-box {
+.header__logo-box {
   position: absolute;
   top: 4rem;
   left: 4rem;
 }
 
-.logo { height: 3.5rem; }
+.header__logo { height: 3.5rem; }
 
-.text-box {
+.header__text-box {
   text-align: center;
   position: absolute;
   top: 40%;
@@ -57,7 +57,7 @@ body {
   margin-bottom: 6rem;
 }
 
-.head-primary-main {
+.head-primary--main {
   display: block;
   font-size: 6rem;
   font-weight: 400;
@@ -65,7 +65,7 @@ body {
   animation: moveInLeft 1s ease-out;
 }
 
-.head-primary-sub {
+.head-primary--sub {
   display: block;
   font-size: 2rem;
   font-weight: 700;
@@ -113,12 +113,12 @@ body {
   opacity: 0;
 }
 
-.btn-white {
+.btn--white {
   background-color: #fff;
   color: #777;
 }
 
-.btn-white::after { background-color: #fff; }
+.btn--white::after { background-color: #fff; }
 
 .animated {
   animation: moveInBottom 0.5s ease-out 0.75s;
