--- a/natours/sass/home.scss
+++ b/natours/sass/home.scss
@@ -2,3 +2,9 @@
   animation: moveInBottom 0.5s ease-out 0.75s;
   animation-fill-mode: backwards;
 }
+
+.section-about {
+  background-color: $grey-light;
+  padding: 25rem 0;
+  margin-top: -20vh;
+}
