--- a/natours/sass/typography.scss
+++ b/natours/sass/typography.scss
@@ -28,3 +28,20 @@ body {
     animation: moveInRight 1s ease-out;
   }
 }
+
+.head-secondary {
+  display: inline-block;
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  background-image: linear-gradient(to right, $light, $dark);
+  background-clip: text;
+  color: transparent;
+  letter-spacing: 2px;
+  transition: all 0.2s;
+
+  &:hover {
+    transform: skewY(2deg) skewX(15deg) scale(1.1);
+    text-shadow: 0.5rem 1rem 2rem rgba($black, 0.2);
+  }
+}
