--- a/natours/sass/utilities.scss
+++ b/natours/sass/utilities.scss
@@ -1,3 +1,5 @@
 .center-text { text-align: center; }
 
-.mg-bot-8 { margin-bottom: 8rem; }
+.mg-bot-big { margin-bottom: 8rem; }
+
+.mg-bot-small { margin-bottom: 1.5rem; }
