--- a/natours/css/style.css
+++ b/natours/css/style.css
@@ -76,11 +76,24 @@ body {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
     text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
 
+.head-tertiary {
+  font-size: 1.6rem;
+  font-weight: 700;
+  text-transform: uppercase; }
+
+.parag {
+  font-size: 1.6rem; }
+  .parag:not(:last-child) {
+    margin-bottom: 3rem; }
+
 .center-text {
   text-align: center; }
 
-.mg-bot-8 {
+.mg-bot-big {
   margin-bottom: 8rem; }
+
+.mg-bot-small {
+  margin-bottom: 1.5rem; }
 
 .animated {
   animation: moveInBottom 0.5s ease-out 0.75s;
@@ -129,6 +142,25 @@ body {
   color: #777; }
   .btn--white::after {
     background-color: #fff; }
+
+.btn-text:link, .btn-text:visited {
+  font-size: 1.6rem;
+  color: #55c57a;
+  display: inline-block;
+  text-decoration: none;
+  border-bottom: 1px solid #55c57a;
+  padding: 3px;
+  transition: all 0.2s; }
+
+.btn-text:hover {
+  background-color: #55c57a;
+  color: #fff;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
+  transform: translateY(-2px); }
+
+.btn-text:active {
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+  transform: translateY(0); }
 
 .header {
   height: 95vh;
