Hover effect on composition

--- a/natours/sass/main.scss
+++ b/natours/sass/main.scss
@@ -7,7 +7,9 @@
 @import "typography";
 @import "utilities";
 
-@import "home";
 @import "button";
+@import "composition";
+
+@import "home";
 @import "header";
 @import "grid";
