--- a/natours/css/style.css
+++ b/natours/css/style.css
@@ -71,7 +71,8 @@ body {
   background-clip: text;
   color: transparent;
   letter-spacing: 2px;
-  transition: all 0.2s; }
+  transition: all 0.2s;
+  -webkit-background-clip: text; }
   .head-secondary:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
     text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
@@ -180,6 +181,35 @@ body {
   .composition:hover .composition__photo:not(:hover) {
     transform: scale(0.9); }
 
+.feature-box {
+  background-color: rgba(255, 255, 255, 0.8);
+  font-size: 1.5rem;
+  padding: 2.5rem;
+  text-align: center;
+  border-radius: 3px;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+  transition: transform 0.3s; }
+  .feature-box__icon {
+    height: 6rem;
+    margin-bottom: 2.5rem;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-size: contain; }
+  .feature-box:hover {
+    transform: translateY(-1.5rem) scale(1.03); }
+
+.world {
+  background-image: url(../logo/basic_world.png); }
+
+.compass {
+  background-image: url(../logo/basic_compass.png); }
+
+.map {
+  background-image: url(../logo/basic_map.png); }
+
+.heart {
+  background-image: url(../logo/basic_heart.png); }
+
 .animated {
   animation: moveInBottom 0.5s ease-out 0.75s;
   animation-fill-mode: backwards; }
@@ -188,6 +218,15 @@ body {
   background-color: #f7f7f7f7;
   padding: 25rem 0;
   margin-top: -20vh; }
+
+.section-features {
+  padding: 20rem 0;
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/nat-4.jpg);
+  background-size: cover;
+  transform: skewY(-4deg);
+  margin-top: -10rem; }
+  .section-features > * {
+    transform: skewY(4deg); }
 
 .header {
   height: 95vh;
