Flip animation for cards

--- a/natours/sass/variables.scss
+++ b/natours/sass/variables.scss
@@ -2,6 +2,12 @@ $light: #7ed56f;
 $medium: #55c57a;
 $dark: #28b485;
 
+$second-light: #ffb900;
+$second-dark: #ff7730;
+
+$tertiary-light: #2998ff;
+$tertiary-dark: #5643fa;
+
 $grey: #777;
 $white: #fff;
 $black: #000;
