--- a/natours/css/style.css
+++ b/natours/css/style.css
@@ -210,6 +210,32 @@ body {
 .heart {
   background-image: url(../logo/basic_heart.png); }
 
+.card {
+  perspective: 150rem;
+  position: relative;
+  height: 50rem; }
+  .card__side {
+    background-color: orange;
+    height: 50rem;
+    transition: all 0.8s ease;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    backface-visibility: hidden;
+    border-radius: 3px;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
+    .card__side--front {
+      background-color: #fff; }
+    .card__side--back {
+      transform: rotateY(180deg); }
+      .card__side--back-1 {
+        background-image: linear-gradient(to right bottom, #ffb900, #ff7730); }
+  .card:hover .card__side--front {
+    transform: rotateY(180deg); }
+  .card:hover .card__side--back {
+    transform: rotateY(0); }
+
 .animated {
   animation: moveInBottom 0.5s ease-out 0.75s;
   animation-fill-mode: backwards; }
@@ -227,6 +253,11 @@ body {
   margin-top: -10rem; }
   .section-features > * {
     transform: skewY(4deg); }
+
+.section-tours {
+  background-color: #f7f7f7f7;
+  padding: 25rem 0 50rem 0;
+  margin-top: -10rem; }
 
 .header {
   height: 95vh;
