--- a/natours/sass/variables.scss
+++ b/natours/sass/variables.scss
@@ -11,7 +11,9 @@ $tertiary-dark: #5643fa;
 $grey: #777;
 $white: #fff;
 $black: #000;
+
 $grey-light: #f7f7f7f7;
+$grey-dark: #eee;
 
 $grid-width: 114rem;
 $vertical: 8rem;
