--- a/natours/sass/card.scss
+++ b/natours/sass/card.scss
@@ -16,26 +16,18 @@
     box-shadow: 0 1.5rem 4rem rgba($black, 0.15);
     overflow: hidden;
 
-    &--front {
-      background-color: $white;
-    }
+    &--front { background-color: $white; }
 
     &--back {
       transform: rotateY(-180deg);
 
-      &-1 {
-        background-image: linear-gradient(to right bottom, $second-light, $second-dark);
-      }
+      &-1 { background-image: linear-gradient(to right bottom, $second-light, $second-dark); }
     }
   }
 
-  &:hover &__side--front {
-    transform: rotateY(180deg);
-  }
+  &:hover &__side--front { transform: rotateY(180deg); }
 
-  &:hover &__side--back {
-    transform: rotateY(0);
-  }
+  &:hover &__side--back { transform: rotateY(0); }
 
   &__picture {
     background-size: cover;
@@ -96,9 +88,7 @@
         font-size: 1.5rem;
         padding: 1rem;
 
-        &:not(:last-child) {
-          border-bottom: 1px solid $grey-dark;
-        }
+        &:not(:last-child) { border-bottom: 1px solid $grey-dark; }
       }
     }
   }
