--- a/natours/sass/variables.scss
+++ b/natours/sass/variables.scss
@@ -12,7 +12,7 @@ $grey: #777;
 $white: #fff;
 $black: #000;
 
-$grey-light: #f7f7f7f7;
+$grey-light: "unquote('#f7f7f7f7')";
 $grey-dark: #eee;
 
 $grid-width: 114rem;
