--- a/natours/css/style.css
+++ b/natours/css/style.css
@@ -215,7 +215,6 @@ body {
   position: relative;
   height: 52rem; }
   .card__side {
-    background-color: orange;
     height: 52rem;
     transition: all 0.8s ease;
     position: absolute;
@@ -275,6 +274,21 @@ body {
         padding: 1rem; }
         .card__details ul li:not(:last-child) {
           border-bottom: 1px solid #eee; }
+  .card__wrap {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); }
+  .card__price-box {
+    text-align: center;
+    margin-bottom: 8rem;
+    color: #fff; }
+  .card__price-only {
+    font-size: 1.4rem;
+    text-transform: uppercase; }
+  .card__price-value {
+    font-size: 6rem;
+    font-weight: 100; }
 
 .animated {
   animation: moveInBottom 0.5s ease-out 0.75s;
