--- a/natours/sass/card.scss
+++ b/natours/sass/card.scss
@@ -4,7 +4,6 @@
   height: 52rem;
 
   &__side {
-    background-color: orange;
     height: 52rem;
     transition: all 0.8s ease;
     position: absolute;
@@ -91,5 +90,28 @@
         &:not(:last-child) { border-bottom: 1px solid $grey-dark; }
       }
     }
+  }
+
+  &__wrap {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  &__price-box {
+    text-align: center;
+    margin-bottom: 8rem;
+    color: $white;
+  }
+
+  &__price-only {
+    font-size: 1.4rem;
+    text-transform: uppercase;
+  }
+
+  &__price-value {
+    font-size: 6rem;
+    font-weight: 100;
   }
 }
