The section tours is finished

--- a/natours/sass/button.scss
+++ b/natours/sass/button.scss
@@ -45,6 +45,13 @@
 
     &::after { background-color: $white; }
   }
+
+  &--green {
+    background-color: $medium;
+    color: $white;
+
+    &::after { background-color: $medium; }
+  }
 }
 
 .btn-text {
