--- a/natours/sass/card.scss
+++ b/natours/sass/card.scss
@@ -21,6 +21,10 @@
       transform: rotateY(-180deg);
 
       &-1 { background-image: linear-gradient(to right bottom, $second-light, $second-dark); }
+
+      &-2 { background-image: linear-gradient(to right bottom, $light, $dark); }
+
+      &-3 { background-image: linear-gradient(to right bottom, $tertiary-light, $tertiary-dark); }
     }
   }
 
@@ -40,11 +44,13 @@
     }
 
     &--2 {
-      background-image: url(../img/nat-6.jpg);
+      background-image: url(../img/nat-6.jpg),
+      linear-gradient(to right bottom, $light, $dark);
     }
 
     &--3 {
-      background-image: url(../img/nat-7.jpg);
+      background-image: url(../img/nat-7.jpg),
+      linear-gradient(to right bottom, $tertiary-light, $tertiary-dark);
     }
   }
 
@@ -67,10 +73,21 @@
     -webkit-box-decoration-break: clone;
 
     &--1 {
-      background-image: linear-gradient(
-        to right bottom,
+      background-image: linear-gradient(to right bottom,
         rgba($second-light, 0.85),
         rgba($second-dark, 0.85));
+    }
+
+    &--2 {
+      background-image: linear-gradient(to right bottom,
+        rgba($light, 0.85),
+        rgba($dark, 0.85));
+    }
+
+    &--3 {
+      background-image: linear-gradient(to right bottom,
+        rgba($tertiary-light, 0.85),
+        rgba($tertiary-dark, 0.85));
     }
   }
 
