--- a/natours/css/style.css
+++ b/natours/css/style.css
@@ -350,7 +350,8 @@ body {
     opacity: 1;
     transform: translate(-50%, -50%); }
   .story:hover .story__img {
-    transform: translateX(-4rem) scale(1); }
+    transform: translateX(-4rem) scale(1);
+    filter: blur(3px) brightness(80%); }
 
 .animated {
   animation: moveInBottom 0.5s ease-out 0.75s;
