Building the booking section

--- a/natours/sass/utilities.scss
+++ b/natours/sass/utilities.scss
@@ -1,7 +1,9 @@
 .center-text { text-align: center; }
 
-.mg-bot-big { margin-bottom: 8rem; }
-
 .mg-bot-small { margin-bottom: 1.5rem; }
+
+.mg-bot-medium { margin-bottom: 4rem; }
+
+.mg-bot-big { margin-bottom: 8rem; }
 
 .mg-top-big { margin-top: 10rem; }
