--- a/natours/css/style.css
+++ b/natours/css/style.css
@@ -90,11 +90,14 @@ body {
 .center-text {
   text-align: center; }
 
-.mg-bot-big {
-  margin-bottom: 8rem; }
-
 .mg-bot-small {
   margin-bottom: 1.5rem; }
+
+.mg-bot-medium {
+  margin-bottom: 4rem; }
+
+.mg-bot-big {
+  margin-bottom: 8rem; }
 
 .mg-top-big {
   margin-top: 10rem; }
@@ -366,6 +369,36 @@ body {
     height: 100%;
     width: 100%;
     object-fit: cover; }
+
+.form__group:not(:last-child) {
+  margin-bottom: 2rem; }
+
+.form__input {
+  font-size: 1.5rem;
+  font-family: inherit;
+  color: inherit;
+  padding: 1.5rem 2rem;
+  border-radius: 2px;
+  background-color: rgba(255, 255, 255, 0.5);
+  border: none;
+  border-bottom: 3px solid transparent;
+  width: 90%;
+  display: block; }
+  .form__input::-webkit-input-placeholder {
+    color: #999; }
+  .form__input:focus {
+    outline: none;
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
+    border-bottom: 3px solid #55c57a; }
+    .form__input:focus:invalid {
+      border-bottom: 3px solid #ff7730; }
+
+.form__label {
+  font-size: 1.2rem;
+  font-weight: 700;
+  margin-left: 2rem;
+  margin-top: 0.7rem;
+  display: block; }
 
 .animated {
   animation: moveInBottom 0.5s ease-out 0.75s;
