--- a/natours/sass/variables.scss
+++ b/natours/sass/variables.scss
@@ -11,6 +11,7 @@ $tertiary-dark: #5643fa;
 $grey: #777;
 $white: #fff;
 $black: #000;
+$cloud: #999;
 
 $grey-light: "unquote('#f7f7f7f7')";
 $grey-dark: #eee;
