Custom radio button

--- a/natours/sass/utilities.scss
+++ b/natours/sass/utilities.scss
@@ -2,7 +2,7 @@
 
 .mg-bot-small { margin-bottom: 1.5rem; }
 
-.mg-bot-medium { margin-bottom: 4rem; }
+.mg-bot-medium { margin-bottom: 4rem !important; }
 
 .mg-bot-big { margin-bottom: 8rem; }
 
