--- a/natours/sass/form.scss
+++ b/natours/sass/form.scss
@@ -12,6 +12,7 @@
     border-bottom: 3px solid transparent;
     width: 90%;
     display: block;
+    transition: all 0.3s;
 
     &::-webkit-input-placeholder { color: $cloud; }
 
@@ -38,4 +39,46 @@
     visibility: hidden;
     transform: translateY(-4rem);
   }
+
+  &__radio-group {
+    width: 49%;
+    display: inline-block;
+  }
+
+  &__radio-label {
+    font-size: $defs-font;
+    cursor: pointer;
+    position: relative;
+    padding-left: 4.5rem;
+  }
+
+  &__radio-button {
+    display: inline-block;
+    height: 3rem;
+    width: 3rem;
+    border: 5px solid $medium;
+    border-radius: 50%;
+    position: absolute;
+    left: 0;
+    top: -0.4rem;
+    
+    &::after {
+      content: '';
+      display: block;
+      height: 1.2rem;
+      width: 1.2rem;
+      border-radius: 50%;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: $medium;
+      opacity: 0;
+      transition: opacity 0.2s; 
+    }
+  }
+
+  &__radio-input { display: none; }
+
+  &__radio-input:checked ~ &__radio-label &__radio-button::after { opacity: 1; }
 }
