--- a/natours/sass/nav.scss
+++ b/natours/sass/nav.scss
@@ -9,7 +9,8 @@
     top: 6rem;
     right: 6rem;
     border-radius: 50%;
-    z-index: 200; 
+    z-index: 200;
+    box-shadow: 0 1rem 4rem rgba($black, 0.1);
   }
 
   &__back {
@@ -21,15 +22,18 @@
     right: 6.5rem;
     background-image: radial-gradient($light, $dark);
     z-index: 100;
+    transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
   }
 
   &__navigation {
     height: 100vh;
-    width: 100%;
+    width: 0;
     position: fixed;
     top: 0;
     right: 0;
     z-index: 150;
+    opacity: 0;
+    transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
   }
 
   &__list {
@@ -39,6 +43,7 @@
     transform: translate(-50%, -50%);
     list-style: none;
     text-align: center;
+    width: 100%;
   }
 
   &__item { margin: 1rem; }
@@ -69,5 +74,12 @@
       color: $medium;
       transform: translateX(1rem);
     }
+  }
+
+  &__checkbox:checked ~ &__back { transform: scale(80); }
+
+  &__checkbox:checked ~ &__navigation {
+    opacity: 1;
+    width: 100%;
   }
 }
