Styling the navigation button

--- a/natours/css/style.css
+++ b/natours/css/style.css
@@ -584,7 +584,9 @@ body {
   right: 6rem;
   border-radius: 50%;
   z-index: 200;
-  box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.1); }
+  box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.1);
+  text-align: center;
+  cursor: pointer; }
 
 .nav__back {
   height: 6rem;
@@ -645,3 +647,38 @@ body {
 .nav__checkbox:checked ~ .nav__navigation {
   opacity: 1;
   width: 100%; }
+
+.nav__icon {
+  position: relative;
+  margin-top: 3.5rem; }
+  .nav__icon, .nav__icon::before, .nav__icon::after {
+    display: inline-block;
+    width: 3rem;
+    height: 2px;
+    background-color: #333; }
+  .nav__icon::before, .nav__icon::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    transition: all 0.2s; }
+  .nav__icon::before {
+    top: -0.8rem; }
+  .nav__icon::after {
+    top: 0.8rem; }
+
+.nav__button:hover .nav__icon::before {
+  top: -1rem; }
+
+.nav__button:hover .nav__icon::after {
+  top: 1rem; }
+
+.nav__checkbox:checked + .nav__button .nav__icon {
+  background-color: transparent; }
+
+.nav__checkbox:checked + .nav__button .nav__icon::before {
+  top: 0;
+  transform: rotate(135deg); }
+
+.nav__checkbox:checked + .nav__button .nav__icon::after {
+  top: 0;
+  transform: rotate(-135deg); }
