--- a/natours/sass/nav.scss
+++ b/natours/sass/nav.scss
@@ -11,6 +11,8 @@
     border-radius: 50%;
     z-index: 200;
     box-shadow: 0 1rem 4rem rgba($black, 0.1);
+    text-align: center;
+    cursor: pointer;
   }
 
   &__back {
@@ -81,5 +83,47 @@
   &__checkbox:checked ~ &__navigation {
     opacity: 1;
     width: 100%;
+  }
+
+  &__icon {
+    position: relative;
+    margin-top: 3.5rem;
+
+    &,
+    &::before,
+    &::after {
+      display: inline-block;
+      width: 3rem;
+      height: 2px;
+      background-color: $drab;
+    }
+
+    &::before,
+    &::after {
+      content: '';
+      position: absolute;
+      left: 0;
+      transition: all 0.2s;
+    }
+
+    &::before { top: -0.8rem; }
+
+    &::after { top: 0.8rem; }
+  }
+
+  &__button:hover &__icon::before { top: -1rem; }
+
+  &__button:hover &__icon::after { top: 1rem; }
+
+  &__checkbox:checked + &__button &__icon { background-color: transparent; }
+
+  &__checkbox:checked + &__button &__icon::before {
+    top: 0;
+    transform: rotate(135deg);
+  }
+
+  &__checkbox:checked + &__button &__icon::after {
+    top: 0;
+    transform: rotate(-135deg);
   }
 }
