Mixin for absolute center

--- a/natours/sass/nav.scss
+++ b/natours/sass/nav.scss
@@ -39,10 +39,8 @@
   }
 
   &__list {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    @include abcenter;
+    
     list-style: none;
     text-align: center;
     width: 100%;
