--- a/natours/sass/card.scss
+++ b/natours/sass/card.scss
@@ -109,12 +109,7 @@
     }
   }
 
-  &__wrap {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
+  &__wrap { @include abcenter; }
 
   &__price-box {
     text-align: center;
