--- a/natours/sass/form.scss
+++ b/natours/sass/form.scss
@@ -63,18 +63,16 @@
     top: -0.4rem;
     
     &::after {
-      content: '';
+      @include abcenter;
+
       display: block;
+      content: '';
       height: 1.2rem;
       width: 1.2rem;
       border-radius: 50%;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
       background-color: $medium;
       opacity: 0;
-      transition: opacity 0.2s; 
+      transition: opacity 0.2s;
     }
   }
 
