--- a/natours/sass/story.scss
+++ b/natours/sass/story.scss
@@ -31,10 +31,8 @@
   &__text { transform: skewX(12deg); }
 
   &__caption {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, 20%);
+    @include abcenter;
+    
     color: $white;
     text-transform: uppercase;
     font-size: 1.7rem;
