--- a/natours/sass/popup.scss
+++ b/natours/sass/popup.scss
@@ -6,6 +6,9 @@
   left: 0;
   background-color: rgba($black, 0.8);
   z-index: 300;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s;
 
   &__content {
     @include abcenter;
@@ -16,6 +19,9 @@
     box-shadow: 0 2rem 4rem rgba($black, 0.2);
     border-radius: 3px;
     overflow: hidden;
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(0.2);
+    transition: all 0.5s 0.2s;
   }
 
   &__left {
@@ -40,5 +46,33 @@
     column-count: 2;
     column-gap: 4rem;
     column-rule: 1px solid $grey-dark;
+  }
+
+  &:target {
+    opacity: 1;
+    visibility: visible;
+  }
+
+  &:target &__content {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+  }
+
+  &__close {
+    &:link,
+    &:visited {
+      display: inline-block;
+      color: $grey;
+      position: absolute;
+      top: 2.5rem;
+      right: 2.5rem;
+      font-size: 3rem;
+      text-decoration: none;
+      line-height: 1;
+    }
+
+    &:hover {
+      color: $medium;
+    }
   }
 }
