--- a/natours/sass/mixins.scss
+++ b/natours/sass/mixins.scss
@@ -12,3 +12,17 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+@mixin respond($breakpoint) {
+  @if $breakpoint == phone {
+    @media (max-width: 600px) { @content };
+  }
+
+  @if $breakpoint == tablet {
+    @media (max-width: 900px) { @content };
+  }
+
+  @if $breakpoint == desktop {
+    @media (max-width: 1600px) { @content };
+  }
+}
