--- a/natours/css/style.css
+++ b/natours/css/style.css
@@ -5,6 +5,15 @@
 
 html {
   font-size: 62.5%; }
+  @media (max-width: 600px) {
+    html {
+      font-size: 50%; } }
+  @media (max-width: 900px) {
+    html {
+      font-size: 60%; } }
+  @media (max-width: 1600px) {
+    html {
+      font-size: 80%; } }
 
 body {
   box-sizing: border-box; }
