--- a/natours/css/style.css
+++ b/natours/css/style.css
@@ -13,7 +13,11 @@ html {
       font-size: 75%; } }
 
 body {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  padding: 3rem; }
+  @media (max-width: 56.25em) {
+    body {
+      padding: 0; } }
 
 @keyframes moveInLeft {
   0% {
@@ -47,8 +51,7 @@ body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
   line-height: 1.7;
-  color: #777;
-  padding: 3rem; }
+  color: #777; }
 
 .head-primary {
   color: #fff;
@@ -61,12 +64,19 @@ body {
     font-weight: 400;
     letter-spacing: 3.5rem;
     animation: moveInLeft 1s ease-out; }
+    @media (max-width: 37.5em) {
+      .head-primary--main {
+        letter-spacing: 1rem;
+        font-size: 5rem; } }
   .head-primary--sub {
     display: block;
     font-size: 2rem;
     font-weight: 700;
     letter-spacing: 1.75rem;
     animation: moveInRight 1s ease-out; }
+    @media (max-width: 37.5em) {
+      .head-primary--sub {
+        letter-spacing: 0.5rem; } }
 
 .head-secondary {
   display: inline-block;
@@ -79,6 +89,12 @@ body {
   letter-spacing: 2px;
   transition: all 0.2s;
   -webkit-background-clip: text; }
+  @media (max-width: 56.25em) {
+    .head-secondary {
+      font-size: 2.5rem; } }
+  @media (max-width: 37.5em) {
+    .head-secondary {
+      font-size: 2rem; } }
   .head-secondary:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
     text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
@@ -519,7 +535,7 @@ body {
   animation-fill-mode: backwards; }
 
 .section-about {
-  background-color: "unquote('#f7f7f7f7')";
+  background-color: #f7f7f7f7;
   padding: 25rem 0;
   margin-top: -20vh; }
 
@@ -533,7 +549,7 @@ body {
     transform: skewY(4deg); }
 
 .section-tours {
-  background-color: "unquote('#f7f7f7f7')";
+  background-color: #f7f7f7f7;
   padding: 25rem 0 15rem 0;
   margin-top: -10rem; }
 
@@ -580,14 +596,27 @@ body {
   margin: 0 auto; }
   .row:not(:last-child) {
     margin-bottom: 8rem; }
+    @media (max-width: 56.25em) {
+      .row:not(:last-child) {
+        margin-bottom: 4rem; } }
   .row::after {
     content: '';
     display: table;
     clear: both; }
+  @media (max-width: 56.25em) {
+    .row {
+      max-width: 50rem; } }
   .row [class^="col-"] {
     float: left; }
     .row [class^="col-"]:not(:last-child) {
       margin-right: 6rem; }
+      @media (max-width: 56.25em) {
+        .row [class^="col-"]:not(:last-child) {
+          margin-right: 0;
+          margin-bottom: 4rem; } }
+    @media (max-width: 56.25em) {
+      .row [class^="col-"] {
+        width: 100% !important; } }
   .row .col-1-of-2 {
     width: calc((100% - 6rem) / 2); }
   .row .col-1-of-3 {
