--- a/natours/sass/base.scss
+++ b/natours/sass/base.scss
@@ -12,4 +12,9 @@ html {
   @include respond(desktop) { font-size: 75%; }
 }
 
-body { box-sizing: border-box; }
+body {
+  box-sizing: border-box;
+  padding: 3rem;
+
+  @include respond(tablet) { padding: 0; }
+}
