--- a/natours/sass/typography.scss
+++ b/natours/sass/typography.scss
@@ -3,7 +3,6 @@ body {
   font-weight: 400;
   line-height: 1.7;
   color: $grey;
-  padding: 3rem;
 }
 
 .head-primary {
@@ -18,6 +17,11 @@ body {
     font-weight: 400;
     letter-spacing: 3.5rem;
     animation: moveInLeft 1s ease-out;
+
+    @include respond(phone) {
+      letter-spacing: 1rem;
+      font-size: 5rem;
+    }
   }
   
   &--sub {
@@ -26,6 +30,8 @@ body {
     font-weight: 700;
     letter-spacing: 1.75rem;
     animation: moveInRight 1s ease-out;
+
+    @include respond(phone) { letter-spacing: 0.5rem; }
   }
 }
 
@@ -39,6 +45,10 @@ body {
   color: transparent;
   letter-spacing: 2px;
   transition: all 0.2s;
+
+  @include respond(tablet) { font-size: 2.5rem; }
+
+  @include respond(phone) { font-size: 2rem; }
   
   -webkit-background-clip: text;
 
