--- a/natours/sass/variables.scss
+++ b/natours/sass/variables.scss
@@ -14,11 +14,12 @@ $black: #000;
 $cloud: #999;
 $drab: #333;
 
-$grey-light: "unquote('#f7f7f7f7')";
+$grey-light: #f7f7f7f7;
 $grey-dark: #eee;
 
 $grid-width: 114rem;
 $vertical: 8rem;
 $horizontal: 6rem;
+$gutter: 4rem;
 
 $defs-font: 1.6rem;
