--- a/natours/css/style.css
+++ b/natours/css/style.css
@@ -578,6 +578,9 @@ body {
   background-position: top;
   position: relative;
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%); }
+  @media (max-width: 37.5em) {
+    .header {
+      clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%); } }
   .header__logo-box {
     position: absolute;
     top: 4rem;
@@ -605,7 +608,8 @@ body {
     clear: both; }
   @media (max-width: 56.25em) {
     .row {
-      max-width: 50rem; } }
+      max-width: 50rem;
+      padding: 0 3rem; } }
   .row [class^="col-"] {
     float: left; }
     .row [class^="col-"]:not(:last-child) {
@@ -635,6 +639,9 @@ body {
   padding: 10rem 0;
   font-size: 1.4rem;
   color: #eee; }
+  @media (max-width: 56.25em) {
+    .footer {
+      padding: 8rem 0; } }
   .footer__logo-box {
     text-align: center;
     margin-bottom: 8rem; }
@@ -645,6 +652,10 @@ body {
     display: inline-block;
     border-top: 1px solid #eee;
     padding-top: 2rem; }
+    @media (max-width: 56.25em) {
+      .footer__nav {
+        width: 100%;
+        text-align: center; } }
   .footer__list {
     list-style: none; }
   .footer__item {
@@ -665,6 +676,10 @@ body {
     border-top: 1px solid #eee;
     padding-top: 2rem;
     float: right; }
+    @media (max-width: 56.25em) {
+      .footer__copyright {
+        text-align: center;
+        float: none; } }
 
 .nav__checkbox {
   display: none; }
@@ -681,6 +696,10 @@ body {
   box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.1);
   text-align: center;
   cursor: pointer; }
+  @media (max-width: 56.25em) {
+    .nav__button {
+      top: 4rem;
+      right: 4rem; } }
 
 .nav__back {
   height: 6rem;
@@ -692,6 +711,10 @@ body {
   background-image: radial-gradient(#7ed56f, #28b485);
   z-index: 100;
   transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1); }
+  @media (max-width: 56.25em) {
+    .nav__back {
+      top: 4.5rem;
+      right: 4.5rem; } }
 
 .nav__navigation {
   height: 100vh;
