--- a/natours/sass/footer.scss
+++ b/natours/sass/footer.scss
@@ -4,6 +4,8 @@
   font-size: 1.4rem;
   color: $grey-dark;
 
+  @include respond(tablet) { padding: 8rem 0; }
+
   &__logo-box {
     text-align: center;
     margin-bottom: 8rem;
@@ -18,6 +20,11 @@
     display: inline-block;
     border-top: 1px solid $grey-dark;
     padding-top: 2rem;
+
+    @include respond(tablet) {
+      width: 100%;
+      text-align: center;
+    }
   }
 
   &__list { list-style: none; }
@@ -50,5 +57,10 @@
     border-top: 1px solid $grey-dark;
     padding-top: 2rem;
     float: right;
+
+    @include respond(tablet) {
+      text-align: center;
+      float: none;
+    }
   }
 }
