--- a/natours/sass/nav.scss
+++ b/natours/sass/nav.scss
@@ -13,6 +13,11 @@
     box-shadow: 0 1rem 4rem rgba($black, 0.1);
     text-align: center;
     cursor: pointer;
+
+    @include respond(tablet) {
+      top: 4rem;
+      right: 4rem;
+    }
   }
 
   &__back {
@@ -25,6 +30,11 @@
     background-image: radial-gradient($light, $dark);
     z-index: 100;
     transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
+
+    @include respond(tablet) {
+      top: 4.5rem;
+      right: 4.5rem;
+    }
   }
 
   &__navigation {
