--- a/natours/sass/features.scss
+++ b/natours/sass/features.scss
@@ -7,6 +7,8 @@
   box-shadow: 0 1.5rem 4rem rgba($black, 0.15);
   transition: transform 0.3s;
 
+  @include respond(tablet) { padding: 2rem; }
+
   &__icon {
     height: 6rem;
     margin-bottom: 2.5rem;
