--- a/natours/sass/footer.scss
+++ b/natours/sass/footer.scss
@@ -9,6 +9,8 @@
   &__logo-box {
     text-align: center;
     margin-bottom: 8rem;
+
+    @include respond(tablet) { margin-bottom: 4rem; }
   }
 
   &__logo {
