--- a/natours/sass/utilities.scss
+++ b/natours/sass/utilities.scss
@@ -2,8 +2,16 @@
 
 .mg-bot-small { margin-bottom: 1.5rem; }
 
-.mg-bot-medium { margin-bottom: 4rem !important; }
+.mg-bot-medium {
+  margin-bottom: 4rem !important;
 
-.mg-bot-big { margin-bottom: 8rem; }
+  @include respond(tablet) { margin-bottom: 3rem !important; }
+}
+
+.mg-bot-big {
+  margin-bottom: 8rem;
+
+  @include respond(tablet) { margin-bottom: 5rem !important; }
+}
 
 .mg-top-big { margin-top: 10rem; }
