Support for Edge and Safari

--- a/natours/sass/story.scss
+++ b/natours/sass/story.scss
@@ -21,12 +21,17 @@
     width: 15rem;
     height: 15rem;
     float: left;
-    shape-outside: circle(50% at 50% 50%);
-    clip-path: circle(50% at 50% 50%);
     transform: translateX(-3rem) skewX(12deg);
     position: relative;
+    overflow: hidden;
+    border-radius: 50%; 
 
     @include respond(phone) { transform: translateX(-3rem) skewX(0); }
+
+    @supports (clip-path: circle(50% at 50% 50%)) {
+      clip-path: circle(50% at 50% 50%);
+      shape-outside: circle(50% at 50% 50%);
+    }
   }
 
   &__img {
