--- a/natours/sass/popup.scss
+++ b/natours/sass/popup.scss
@@ -10,6 +10,8 @@
   visibility: hidden;
   transition: all 0.3s;
 
+  @supports (backdrop-filter: blur(10px)) { background-color: rgba($black, 0.3); }
+
   &__content {
     @include abcenter;
 
